refactoring, add IConnectionManager interface

--- a/src/fasttool_modern/fasttool_modern.csproj
+++ b/src/fasttool_modern/fasttool_modern.csproj
@@ -95,7 +95,6 @@
     <Folder Include="Pages\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\shared\Domain\Domain.csproj" />
-    
+    <ProjectReference Include="..\shared\Persistence\Persistence.csproj" />
   </ItemGroup>
 </Project>
